fixing display on mobile

--- a/styles.css
+++ b/styles.css
@@ -577,7 +577,7 @@ form {
     border-radius: 10px;
     border-color: #af9595;
     margin-top: 25px;
-    width: 160px;
+    width: 190px;
     height: 50px;
     font-size: 18px;
     cursor: pointer;
@@ -585,5 +585,13 @@ form {
   
   .add-task-popup {
     width: 350px;
+  }
+  
+  .cancel {
+    width: 50px;
+  }
+
+  .save {
+    width: 50px;
   }
 }
